--- a/app/src/main/res/layout/activity_pmixture_check.xml
+++ b/app/src/main/res/layout/activity_pmixture_check.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".Student.Activity.FormInfoActivity">
+    tools:context=".Parent.Activity.PMixtureCheckActivity">
 
     <RelativeLayout
         android:id="@+id/rl1"
