--- a/app/src/main/res/layout/activity_cloud_photos.xml
+++ b/app/src/main/res/layout/activity_cloud_photos.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Student.Activity.CloudPhotosActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -52,13 +54,18 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
-            android:text="确定"
             android:gravity="center_vertical"
-            android:paddingRight="10dp"
             android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="确定"
             android:textColor="#ffffff"
             android:textSize="18dp" />
 
     </RelativeLayout>
+
+    <ListView
+        android:id="@+id/listveiw"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
