--- a/app/src/main/res/layout/image_grid_view.xml
+++ b/app/src/main/res/layout/image_grid_view.xml
@@ -5,7 +5,7 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <com.mpl.GrowthStud.Student.View.SquareLayout
+    <ImageView
         android:id="@+id/iv_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
